--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,12 @@
         <form method="GET" action="/get_movie"
         <label for="search-query">Search query: </label> 
         <br>
-        <input id="move_name" name="movie_name">
+        <input id="movie_name" name="movie_name">
         <br>
         <input class="btn btn-success" id="submit-button" type="submit" value="GO" />
         <form>
             
     </div>
-    <script src="../javascript/index.js"></script>
 
 {% endblock %}
   
