Adds five images of movie posters

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -16,7 +16,11 @@
 </p>
 
 <p>
-    <img src= {{ image }}>
+    {% for image in image_list %}
+    <div>
+        <img src= "{{ image }}">
+    </div>
+    {% endfor%}
 </p>
 
 {% endblock %}
