added genre feature

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -28,4 +28,11 @@
     {% endfor%}
 </p>
 
+<p> GENRE:
+    {% for genre in genre_list %}
+
+    {{ genre }}
+    {% endfor %}
+    
+
 {% endblock %}
