Fixed label, added movie quotes api

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     
         <p>Uses The IMBD API, Wikipidia API, and the YouTube API to look up your favorite movies.</p>
         
-        <form method="GET" action="/get_movie"
+        <form method="GET" action="/get_movie">
         <label for="search-query">Search query: </label> 
         <br>
         <input id="movie_name" name="movie_name">
