Added the quote to it's own html

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,5 +16,11 @@
             
     </div>
 
+    <div class="content m-4 center-block">
+        
+        <button class="btn btn-success" id="submit-button"> <a href="/post_quote/">Random Quote</a></button>
+            
+    </div>
+
 {% endblock %}
   
