--- a/static/style.css
+++ b/static/style.css
@@ -101,3 +101,7 @@ sub, sup {
 	line-height: 0;
 }
     /* sets superscript and subscript text so that it doesn't throw off leading for elements in which they are included */
+
+.quote {
+	font-size: 1.5rem;
+}
