added home button from movie.html

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -39,6 +39,12 @@
     {% endfor %}
 </p>
 
+
+        
+<button class="btn btn-success left" id="submit-button"> <a href="/">Home</a></button>
+        
+
+
     
 
 {% endblock %}
