Glued bookmarks database to app

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,5 +22,11 @@
             
     </div>
 
+    <div class="content m-4 center-block">
+
+        <button class="btn btn-success" id="bookmark-button"> <a href="/show_bookmarks/">Bookmarks</a></button>
+
+    </div>
+
 {% endblock %}
   
