--- a/templates/movie.html
+++ b/templates/movie.html
@@ -39,6 +39,16 @@
     {% endfor %}
 </p>
 
-    
+
+        
+<button class="btn btn-success left" id="submit-button"> <a href="/">Home</a></button>
+        
+<div class="content m-4 center-block">
+
+    <button class="btn btn-success" id="add-bookmark-button">
+        <a href="/add_bookmark/?title={{ overview_data.title }}">Add Bookmark</a>
+    </button>
+
+</div>
 
 {% endblock %}
