--- a/templates/movie.html
+++ b/templates/movie.html
@@ -39,16 +39,23 @@
     {% endfor %}
 </p>
 
+<button class="btn btn-success left" id="home-button" style="position: absolute; left: 0;"><a href="/">Home</a></button>
 
-        
-<button class="btn btn-success left" id="submit-button"> <a href="/">Home</a></button>
-        
-<div class="content m-4 center-block">
+<button class="btn btn-success" id="add-bookmark-button" style="display: block; margin: 0 auto;" onclick="displayBookmarkAddedMessage('{{ overview_data.title }}')">Add Bookmark</button>
 
-    <button class="btn btn-success" id="add-bookmark-button">
-        <a href="/add_bookmark/?title={{ overview_data.title }}">Add Bookmark</a>
-    </button>
+<script>
+    function displayBookmarkAddedMessage(title) {
+        // Call the /add_bookmark/ route to add the bookmark to the database
+        fetch(`/add_bookmark/?title=${title}`).then(response => {
+            // Hide the "Add Bookmark" button and display the "bookmark added" message
+            document.querySelector('#add-bookmark-button').style.display = 'none';
+            document.querySelector('#bookmark-added-message').style.display = 'block';
+        });
+    }
+</script>
 
+<div id="bookmark-added-message" style="display: none;">
+    Bookmark added!
 </div>
 
 {% endblock %}
