--- a/templates/movie.html
+++ b/templates/movie.html
@@ -10,10 +10,12 @@
     BUDGET: {{ business_data.budget }}<br>
     REVENUE: {{ business_data.revenue }}<br>
     
+    <p> 
+        OVERVIEW: {{ overview_data.overview }}
 </p>
 
 <p> 
-    OVERVIEW: {{ overview_data.overview }}
+    SHORT WIKEPDIA SUMMARY: {{ wikiedia_summary["plotShort"] }}
 
 </p>
 
