--- a/templates/movie.html
+++ b/templates/movie.html
@@ -15,7 +15,7 @@
 </p>
 
 <p> 
-    SHORT WIKEPDIA SUMMARY: {{ wikiedia_summary["plotShort"] }}
+    SHORT WIKIPEDIA SUMMARY: {{ wikipedia_summary["plotShort"] }}
 
 </p>
 
