--- a/static/style.css
+++ b/static/style.css
@@ -107,3 +107,90 @@ sub, sup {
 }
 
 
+.movie-details {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.movie-detail {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.movie-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.movie-image {
+    width: 30%;
+    margin-bottom: 20px;
+}
+
+.btn {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #28a745;
+}
+
+.btn-success.left {
+    position: absolute;
+    left: 0;
+}
+
+#bookmark-added-message {
+    font-size: 16px;
+    margin-top: 20px;
+    color: #28a745;
+    font-weight: bold;
+}
+
+.content {
+	border: 1px solid #ddd;
+	padding: 20px;
+	background-color: #f5f5f5;
+}
+h1 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+p {
+	font-size: 24px;
+	margin-bottom: 20px;
+}
+label {
+	font-size: 24px;
+	margin-bottom: 10px;
+	display: block;
+}
+
+input {
+	font-size: 20px;
+	padding: 10px;
+	margin-bottom: 20px;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+	width: 60%;
+	max-width: 500px;
+}
+#submit-button {
+	font-size: 24px;
+	padding: 10px 30px;
+	border-radius: 5px;
+}
+button a {
+	color: white;
+	text-decoration: none;
+}
