--- a/templates/movie.html
+++ b/templates/movie.html
@@ -26,6 +26,19 @@
             </div>
             {% endfor %}
         </div>
+<!-- trailer_video -->
+
+{% if youtube_trailer %}
+
+<h2>{{ youtube_trailer.title }}</h2>
+
+<iframe width="420" height="315" src="https://www.youtube.com/embed/{{youtube_trailer.video_id}}"></iframe>
+
+{% else %} 
+
+<h2>Sorry, no trailer</h2>
+
+{% endif %}
 
         <p class="movie-detail">
             GENRE:
