--- a/templates/movie.html
+++ b/templates/movie.html
@@ -28,11 +28,11 @@
         </div>
 <!-- trailer_video -->
 
-{% if youtube_trailer %}
+{% if data %}
 
-<h2>{{ youtube_trailer.title }}</h2>
+<h2>{{ data.title }}</h2>
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/{{youtube_trailer.video_id}}"></iframe>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/{{data.video_id}}"></iframe>
 
 {% else %} 
 
