Added navigation, removed quotes html

--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -16,5 +16,7 @@
         {% else %}
             <p>You have no bookmarks.</p>
         {% endif %}
+
     </div>
+    <button class="btn btn-success" id="home-button"><a href="/">Home</a></button>
 {% endblock %}
