--- a/templates/error.html
+++ b/templates/error.html
@@ -3,4 +3,7 @@
 
 {{ error }}
 
+<button class="btn btn-success" id="home-button"><a href="/">Home</a></button>
+<button class="btn btn-success"><a href="/show_bookmarks/" class="text-white">Bookmarks</a></button>
+
 {% endblock %}
