--- a/static/style.css
+++ b/static/style.css
@@ -106,6 +106,10 @@ sub, sup {
 	font-size: 1.5rem;
 }
 
+#movie_name {
+	margin: auto;
+	display: block;
+}
 
 .movie-details {
     max-width: 800px;
