--- a/templates/error.html
+++ b/templates/error.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
+
 {% block content %}
-
-{{ error }}
-
-<button class="btn btn-success" id="home-button"><a href="/">Home</a></button>
-<button class="btn btn-success"><a href="/show_bookmarks/" class="text-white">Bookmarks</a></button>
-
+    <div class="alert alert-danger" role="alert">
+        {{ error }}
+    </div>
+    <button class="btn btn-success" id="home-button">
+        <a href="/">Home</a>
+    </button>
+    <button class="btn btn-success">
+        <a href="/show_bookmarks/" class="text-white">Bookmarks</a>
+    </button>
 {% endblock %}
