--- a/templates/search.html
+++ b/templates/search.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <h1>Search Results for "{{ movie_title }}"</h1>
+  {% if search_movies %}
     
-<h1>Search Results for '{{ movie_title }}'</h1>
-<ul>
     {% for movie in search_movies %}
-
-    <div >
+    <div>
         <a method="GET" href="/get_movie/title=`{{movie['title']}}`" id="{{loop.index}}" name="{{ movie['title'] }}"> {{ movie['title'] }}</a>
     </div>
-
     {% endfor %}
-</ul>
-
+    
+  {% else %}
+    <p>No results found for "{{ movie_title }}".</p>
+  {% endif %}
 {% endblock %}
